--- a/package.json
+++ b/package.json
@@ -6,33 +6,15 @@
   "author": "Tushar Savaliya",
   "license": "ISC",
   "scripts": {
-    "start": "npm run  build && npm run prod",
-    "prod": "nodemon --exec babel-node server.js",
-    "dev": "nodemon --exec babel-node server.js",
-    "build": "babel src --out-dir dist",
-    "serve": "yarn build && node dist/server.js",
-    "pre_deploy": "yarn",
-    "deploy": "pm2 start npm --name api -- start",
-    "pm2:start": "pm2 start src/config/ecosystem.config.js",
-    "pm2:stop": "pm2 stop src/config/ecosystem.config.js",
-    "pm2:restart": "pm2 restart src/config/ecosystem.config.js",
-    "pm2:delete": "pm2 delete src/config/ecosystem.config.js",
-    "pm2:log": "pm2 logs src/config/ecosystem.config.js"
+    "start": "nodemon"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
-    "@babel/node": "^7.17.10",
-    "@babel/preset-env": "^7.18.2",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "chalk": "^5.3.0",
     "express": "^4.18.2",
     "ip": "^2.0.0",
     "mongoose": "^7.2.2",
