--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "ip": "^2.0.0",
     "mongoose": "^7.2.2",
+    "mongoose-paginate-v2": "^1.7.1",
     "request": "^2.88.2"
   }
 }
