--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "express": "^4.18.2",
     "ip": "^2.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
     "mongoose-paginate-v2": "^1.7.1",
-    "request": "^2.88.2"
+    "nodemailer": "^6.9.3",
+    "request": "^2.88.2",
+    "yup": "^1.2.0"
   }
 }
