--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "ip": "^2.0.0",
     "mongoose": "^7.2.2",
